--- a/configs/blacklist.conf
+++ b/configs/blacklist.conf
@@ -1,3 +1,6 @@
+# /etc/modprobe.d/blacklist.conf
+#
+#
 # This file lists those modules which we don't want to be loaded by
 # alias expansion, usually so some other driver will be loaded for the
 # device instead.
