--- a/configs/i3/config
+++ b/configs/i3/config
@@ -130,6 +130,7 @@ bindsym $mod+Ctrl+7 workspace 7:C7CMD
 bindsym $mod+Ctrl+8 workspace 8:C8CMD
 bindsym $mod+Ctrl+9 workspace 9:C9CMD
 bindsym $mod+Ctrl+0 workspace 0:C0CMD
+bindsym $mod+Ctrl+t workspace TMP
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1:1CMD
@@ -145,6 +146,7 @@ bindsym $mod+Shift+0 move container to workspace 10:0RSV
 
 #open in floating mode
 for_window [class="Eog"] floating enable
+for_window [class="Mask"] floating enable
 
 # Open applications on specific workspaces
 #assign [class="URxvt"] $ws1
@@ -176,10 +178,10 @@ mode "resize" {
         bindsym semicolon resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        bindsym Left resize shrink width 2 px or 2 ppt
+        bindsym Down resize grow height 2 px or 2 ppt
+        bindsym Up resize shrink height 2 px or 2 ppt
+        bindsym Right resize grow width 2 px or 2 ppt
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
