--- a/configs/i3/config
+++ b/configs/i3/config
@@ -34,8 +34,8 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-#bindsym $mod+Return exec urxvt
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec urxvt
+# bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -150,6 +150,7 @@ bindsym $mod+Ctrl+g workspace GIMP
 bindsym $mod+Ctrl+n workspace NOTE
 bindsym $mod+Ctrl+a workspace AUDIO
 bindsym $mod+Ctrl+v workspace VIDEO
+bindsym $mod+Ctrl+b workspace VBOX
 bindsym $mod+Ctrl+Shift+1 workspace CODE1
 bindsym $mod+Ctrl+Shift+2 workspace CODE2
 bindsym $mod+Ctrl+Shift+3 workspace CODE3
@@ -202,10 +203,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym j resize shrink width 20 px or 20 ppt
+        bindsym k resize grow height 20 px or 20 ppt
+        bindsym l resize shrink height 20 px or 20 ppt
+        bindsym semicolon resize grow width 20 px or 20 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 2 px or 2 ppt
