--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -32,7 +32,7 @@ order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "run_watch DHCP"
-order += "run_watch VPN"
+# order += "run_watch VPN"
 #order += "battery 1"
 order += "load"
 order += "tztime local"
