--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -7,24 +7,24 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
-		colors = true
+	colors = true
 		interval = 5
 }
 
 #general {
-	#colors = true
-	#interval = 1
-	#output_format = i3bar
-	#color_good = "#2267a5"
-	#color_degraded = "#8c7f22"
-	#color_bad = "#be2422"
+#colors = true
+#interval = 1
+#output_format = i3bar
+#color_good = "#2267a5"
+#color_degraded = "#8c7f22"
+#color_bad = "#be2422"
 #}
 #general {
-	#colors = true
-	#color_good = "#BBBBBB"
-	#color_bad = "#CC1616"
-	#color_degraded = "#55858E"
-	#interval = 5
+#colors = true
+#color_good = "#BBBBBB"
+#color_bad = "#CC1616"
+#color_degraded = "#55858E"
+#interval = 5
 #}
 order += "cpu_usage /"
 order += "disk /"
@@ -39,18 +39,18 @@ order += "tztime local"
 
 ### CPU usage in %
 cpu_usage {
-  format = " CPU Usage: %usage "
+	format = "CPU: %usage "
 }
 
 wireless _first_ {
-        format_up = " (%essid - %quality) %ip"
-        format_down = "down"
+	format_up = " (%essid - %quality) %ip"
+		format_down = "down"
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+# if you use %speed, i3status requires root privileges
+	format_up = ": %ip (%speed)"
+		format_down = ": down"
 }
 
 run_watch DHCP {
@@ -62,40 +62,40 @@ run_watch VPN {
 }
 
 volume master {
-        format = "AUD %volume"
-        format_muted = " (%volume)"
-        device = "pulse:1"
-        mixer = "Master"
-        mixer_idx = 0
+	format = "AUD %volume"
+		format_muted = " (%volume)"
+		device = "pulse:1"
+		mixer = "Master"
+		mixer_idx = 0
 }
 
 battery 1 {
-        format = "%status %percentage %remaining"
-        status_bat = ""
-        status_chr = ""
-        status_full = ""
-        low_threshold = 30
-        threshold_type = percentage
-        integer_battery_capacity = true
-        color_good = "#0000FF"
+	format = "%status %percentage %remaining"
+		status_bat = ""
+		status_chr = ""
+		status_full = ""
+		low_threshold = 30
+		threshold_type = percentage
+		integer_battery_capacity = true
+		color_good = "#0000FF"
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+	pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+	pidfile = "/var/run/vpnc/pid"
 }
 
 tztime local {
-        format = " %a %h %d, %Y %I:%M:%S %p"
+	format = " %a %h %d, %Y %I:%M:%S %p"
 }
 
 load {
-        format = " %1min %5min %15min"
+	format = " %1min %5min %15min"
 }
 
 disk "/" {
-        format = " %avail"
+	format = " %avail"
 }
