--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -32,14 +32,14 @@ order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "run_watch DHCP"
-# order += "run_watch VPN"
+order += "run_watch VPN"
 #order += "battery 1"
 order += "load"
 order += "tztime local"
 
 ### CPU usage in %
 cpu_usage {
-	format = "CPU: %usage "
+	format = "CPU: %usage"
 }
 
 wireless _first_ {
@@ -97,5 +97,5 @@ load {
 }
 
 disk "/" {
-	format = " %avail"
+	format = " %avail"
 }
