--- a/configs/link-files/i3/config
+++ b/configs/link-files/i3/config
@@ -43,7 +43,9 @@ bindsym $mod+Return exec gnome-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_recent_aliases
+#bindsym $mod+Shift+d exec dmenu_recent_aliases
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -56,10 +58,10 @@ bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+#bindsym $mod+Left focus left
+#bindsym $mod+Down focus down
+#bindsym $mod+Up focus up
+#bindsym $mod+Right focus right
 
 # move focused window
 bindsym $mod+Shift+j move left
@@ -163,6 +165,10 @@ bindsym $mod+Ctrl+h workspace HOME
 bindsym $mod+Ctrl+p workspace PROX
 bindsym $mod+Ctrl+x workspace WX
 bindsym $mod+Ctrl+s workspace SYS
+bindsym $mod+Ctrl+l workspace WKLOG
+bindsym $mod+Home workspace HOME
+bindsym $mod+Ctrl+Home workspace Slack
+bindsym $mod+Ctrl+End workspace Android
 #bindsym $mod+Ctrl+x workspace RSS
 #bindsym $mod+Ctrl+Shift+w move container to workspace WEB
 bindsym $mod+Ctrl+Shift+1 workspace 1
@@ -265,7 +271,7 @@ exec --no-startup-id nm-applet
 #exec --no-startup-id feh --bg-scale /usr/share/backgrounds/Cielo_estrellado_by_Eduardo_Diez_Viñuela.jpg
 exec --no-startup-id feh --bg-scale $HOME/Pictures/background.jpg
 bindsym $mod+Shift+w exec /usr/bin/google-chrome
-bindsym $mod+Shift+Ctrl+w exec /usr/bin/google-chrome --incognito --new-window
+bindsym $mod+Shift+i exec /usr/bin/google-chrome --incognito --new-window
 bindsym $mod+Shift+f exec /usr/bin/firefox
 bindsym $mod+Shift+m exec /usr/bin/code -n
 bindsym $mod+Shift+u exec /usr/bin/netease-cloud-music
@@ -302,7 +308,8 @@ bindsym $mod+p exec /home/xiang/Src/i3lock-fancy/lock
 bindsym $mod+Shift+BackSpace move scratchpad
 bindsym $mod+backslash scratchpad show
 bindsym $mod+Print exec gnome-screenshot -i
-bindsym $mod+Insert exec i3-input -F 'rename workspace to "%s"' -P 'Rename workspace: '
+bindsym $mod+Down exec i3-input -F 'rename workspace to "%s"' -P 'Rename workspace: '
+bindsym $mod+Insert exec i3-input -F 'workspace "%s"' -P 'new workspace: '
 # Start iceweasel on workspace 3, then switch back to workspace 1
 # (Being a command-line utility, i3-msg does not support startup notifications,
 #  hence the exec --no-startup-id.)
