--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -32,14 +32,15 @@ order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "run_watch DHCP"
-order += "run_watch VPN"
+order += "run_watch SSR"
+order += "run_watch POLIPO"
 #order += "battery 1"
 order += "load"
 order += "tztime local"
 
 ### CPU usage in %
 cpu_usage {
-	format = "CPU: %usage"
+	format = "CPU: %usage"
 }
 
 wireless _first_ {
@@ -61,8 +62,16 @@ run_watch VPN {
 	pidfile = "/var/run/vpnc/pid"
 }
 
+run_watch SSR {
+	pidfile = "/var/run/shadowsocksr.pid"
+}
+
+run_watch POLIPO {
+	pidfile = "/var/run/polipo/polipo.pid"
+}
+
 volume master {
-	format = "AUD %volume"
+	format = "VOL %volume"
 		format_muted = " (%volume)"
 		device = "pulse:1"
 		mixer = "Master"
@@ -97,5 +106,5 @@ load {
 }
 
 disk "/" {
-	format = " %avail"
+	format = " %avail"
 }
