--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -73,7 +73,8 @@ run_watch POLIPO {
 volume master {
 	format = "VOL %volume"
 		format_muted = " (%volume)"
-		device = "pulse:1"
+#device = "pulse:1"
+#device = "pulse:0"
 		mixer = "Master"
 		mixer_idx = 0
 }
