--- a/configs/link-files/i3/config
+++ b/configs/link-files/i3/config
@@ -201,6 +201,7 @@ for_window [class="Eog"] floating enable
 for_window [class="Display"] floating enable
 for_window [class="mpv"] floating enable
 for_window [class="Mask"] floating enable
+for_window [class="feh"] floating enable
 for_window [class="^i3f*"] floating enable
 
 # Open applications on specific workspaces
