--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -27,15 +27,15 @@ general {
 #interval = 5
 #}
 order += "cpu_usage /"
-order += "disk /"
-order += "volume master"
-order += "wireless _first_"
+#order += "disk /"
+#order += "volume master"
+#order += "wireless _first_"
 order += "ethernet _first_"
-order += "run_watch DHCP"
+#order += "run_watch DHCP"
 order += "run_watch SSR"
-order += "run_watch POLIPO"
+#order += "run_watch POLIPO"
 #order += "battery 1"
-order += "load"
+#order += "load"
 order += "tztime local"
 
 ### CPU usage in %
