--- a/configs/link-files/i3/config
+++ b/configs/link-files/i3/config
@@ -1,4 +1,4 @@
-gaps inner 5
+gaps inner 10
 gaps outer 0
 #xprop click on window to get Class
 for_window [class="^.*"] border pixel 0
@@ -44,8 +44,9 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec dmenu_recent_aliases
-#bindsym $mod+Shift+d exec dmenu_recent_aliases
+# bindsym $mod+d exec dmenu_recent_aliases
+bindsym $mod+d exec rofi -show run
+bindsym $mod+Shift+s exec rofi -show window
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -115,40 +116,51 @@ bindsym $mod+a focus parent
 #set $ws8 8
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 0
-bindsym $mod+Ctrl+1 workspace 1
-bindsym $mod+Ctrl+2 workspace 2
-bindsym $mod+Ctrl+3 workspace 3
-bindsym $mod+Ctrl+4 workspace 4
-bindsym $mod+Ctrl+5 workspace 5
-bindsym $mod+Ctrl+6 workspace 6
-bindsym $mod+Ctrl+7 workspace 7
-bindsym $mod+Ctrl+8 workspace 8
-bindsym $mod+Ctrl+9 workspace 9
-bindsym $mod+Ctrl+0 workspace 0
-bindsym $mod+Shift+1 workspace 1
-bindsym $mod+Shift+2 workspace 2
-bindsym $mod+Shift+3 workspace 3
-bindsym $mod+Shift+4 workspace 4
-bindsym $mod+Shift+5 workspace 5
-bindsym $mod+Shift+6 workspace 6
-bindsym $mod+Shift+7 workspace 7
-bindsym $mod+Shift+8 workspace 8
-bindsym $mod+Shift+9 workspace 9
-bindsym $mod+Shift+0 workspace 0
+bindsym $mod+1 workspace 1:1
+bindsym $mod+2 workspace 2:2
+bindsym $mod+3 workspace 3:3
+bindsym $mod+4 workspace 4:4
+bindsym $mod+5 workspace 5:5
+bindsym $mod+6 workspace 6:6
+bindsym $mod+7 workspace 7:7
+bindsym $mod+8 workspace 8:8
+bindsym $mod+9 workspace 9:9
+bindsym $mod+0 workspace 10:0
+bindsym $mod+Ctrl+1 workspace 11:1
+bindsym $mod+Ctrl+2 workspace 12:2
+bindsym $mod+Ctrl+3 workspace 13:3
+bindsym $mod+Ctrl+4 workspace 14:4
+bindsym $mod+Ctrl+5 workspace 15:5
+bindsym $mod+Ctrl+6 workspace 16:6
+bindsym $mod+Ctrl+7 workspace 17:7
+bindsym $mod+Ctrl+8 workspace 18:8
+bindsym $mod+Ctrl+9 workspace 19:9
+bindsym $mod+Ctrl+0 workspace 20:0
+bindsym $mod+Shift+1 workspace 21:1
+bindsym $mod+Shift+2 workspace 22:2
+bindsym $mod+Shift+3 workspace 23:3
+bindsym $mod+Shift+4 workspace 24:4
+bindsym $mod+Shift+5 workspace 25:5
+bindsym $mod+Shift+6 workspace 26:6
+bindsym $mod+Shift+7 workspace 27:7
+bindsym $mod+Shift+8 workspace 28:8
+bindsym $mod+Shift+9 workspace 29:9
+bindsym $mod+Shift+0 workspace 30:0
+bindsym $mod+Ctrl+Shift+1 workspace 31:1
+bindsym $mod+Ctrl+Shift+2 workspace 32:2
+bindsym $mod+Ctrl+Shift+3 workspace 33:3
+bindsym $mod+Ctrl+Shift+4 workspace 34:4
+bindsym $mod+Ctrl+Shift+5 workspace 35:5
+bindsym $mod+Ctrl+Shift+6 workspace 36:6
+bindsym $mod+Ctrl+Shift+7 workspace 37:7
+bindsym $mod+Ctrl+Shift+8 workspace 38:8
+bindsym $mod+Ctrl+Shift+9 workspace 39:9
+bindsym $mod+Ctrl+Shift+0 workspace 40:0
 bindsym $mod+Ctrl+t workspace TMP
 bindsym $mod+Ctrl+r workspace RUN
-bindsym $mod+Ctrl+c workspace CODE
+bindsym $mod+Ctrl+c workspace VSCODE
 #bindsym $mod+Ctrl+x workspace TMPX
+bindsym $mod+Ctrl+u workspace UML
 bindsym $mod+Ctrl+k workspace TASK
 bindsym $mod+Ctrl+z workspace ZEAL
 bindsym $mod+Ctrl+d workspace DOCS
@@ -158,8 +170,9 @@ bindsym $mod+Ctrl+g workspace GIMP
 bindsym $mod+Ctrl+n workspace NOTE
 bindsym $mod+Ctrl+a workspace AUDIO
 bindsym $mod+Ctrl+v workspace VIDEO
-bindsym $mod+Ctrl+o workspace VBOX
+bindsym $mod+Ctrl+o workspace WIN10
 bindsym $mod+Ctrl+m workspace MAIL
+bindsym $mod+Shift+m workspace MARKDOWN
 bindsym $mod+Ctrl+f workspace FOLDER
 bindsym $mod+Ctrl+h workspace HOME
 bindsym $mod+Ctrl+p workspace PROX
@@ -171,16 +184,6 @@ bindsym $mod+Ctrl+Home workspace Slack
 bindsym $mod+Ctrl+End workspace Android
 #bindsym $mod+Ctrl+x workspace RSS
 #bindsym $mod+Ctrl+Shift+w move container to workspace WEB
-bindsym $mod+Ctrl+Shift+1 workspace 1
-bindsym $mod+Ctrl+Shift+2 workspace 2
-bindsym $mod+Ctrl+Shift+3 workspace 3
-bindsym $mod+Ctrl+Shift+4 workspace 4
-bindsym $mod+Ctrl+Shift+5 workspace 5
-bindsym $mod+Ctrl+Shift+6 workspace 6
-bindsym $mod+Ctrl+Shift+7 workspace 7
-bindsym $mod+Ctrl+Shift+8 workspace 8
-bindsym $mod+Ctrl+Shift+9 workspace 9
-bindsym $mod+Ctrl+Shift+0 workspace 0
 
 # move focused container to workspace
 #bindsym $mod+Shift+1 move container to workspace 1:1CMD
@@ -250,7 +253,7 @@ bar {
 	status_command i3status
 		tray_output primary
 		font xft:Noto Sans 12
-		strip_workspace_numbers no
+		strip_workspace_numbers yes
 
 		colors {
 #       background $transparent
@@ -267,13 +270,14 @@ bar {
 }
 
 #user setting
-exec --no-startup-id nm-applet
+exec_always --no-startup-id nm-applet
+exec --no-startup-id volumeicon
 #exec --no-startup-id feh --bg-scale /usr/share/backgrounds/Cielo_estrellado_by_Eduardo_Diez_Viñuela.jpg
-exec --no-startup-id feh --bg-scale $HOME/Pictures/background.jpg
+exec_always --no-startup-id feh --bg-scale $HOME/Pictures/background.jpg
 bindsym $mod+Shift+w exec /usr/bin/google-chrome
 bindsym $mod+Shift+i exec /usr/bin/google-chrome --incognito --new-window
 bindsym $mod+Shift+f exec /usr/bin/firefox
-bindsym $mod+Shift+m exec /usr/bin/code -n
+#bindsym $mod+Shift+m exec /usr/bin/code -n
 bindsym $mod+Shift+u exec /usr/bin/netease-cloud-music
 #bindsym $mod+Shift+n exec /home/xiang/apps/boostnote/usr/share/boostnote/Boostnote
 bindsym $mod+Shift+z exec /usr/bin/zeal
@@ -286,7 +290,7 @@ bindsym $mod+bracketleft workspace prev
 bindsym $mod+bracketright workspace next
 # bindsym $mod+x exec i3lock
 # bindsym $mod+p exec /home/xiang/.i3/i3lock-fancy-multimonitor/lock
-bindsym $mod+p exec /home/xiang/Src/i3lock-fancy/lock
+# bindsym $mod+p exec /home/xiang/Src/i3lock-fancy/lock
 # bindsym $mod+F12	[instance="gnome-terminal" title="Life"] scratchpad show
 # bindsym $mod+q scratchpad show
 # exec --no-startup-id urxvt -T "Life"
@@ -309,7 +313,9 @@ bindsym $mod+Shift+BackSpace move scratchpad
 bindsym $mod+backslash scratchpad show
 bindsym $mod+Print exec gnome-screenshot -i
 bindsym $mod+Down exec i3-input -F 'rename workspace to "%s"' -P 'Rename workspace: '
-bindsym $mod+Insert exec i3-input -F 'workspace "%s"' -P 'new workspace: '
+#bindsym $mod+Insert exec i3-input -F 'workspace "%s"' -P 'new workspace: '
+bindsym $mod+KP_Add exec i3-input -F 'workspace "%s"' -P 'new workspace: '
+#bindsym $mod+KP_Add exec i3-input -F 'move container to workspace "%s"' -P 'move to workspace: '
 # Start iceweasel on workspace 3, then switch back to workspace 1
 # (Being a command-line utility, i3-msg does not support startup notifications,
 #  hence the exec --no-startup-id.)
@@ -317,3 +323,6 @@ bindsym $mod+Insert exec i3-input -F 'workspace "%s"' -P 'new workspace: '
 #  create a startup notification context, without which the iceweasel window(s)
 #  cannot be matched onto the workspace on which the command was started.)
 #exec --no-startup-id i3-msg 'workspace 3; exec iceweasel; workspace 1'
+#"i3-msg -t get_workspaces | jq -r 'map(select(.focused))[0].name'"
+#bindsym $mod+KP_Divide exec "echo 'exit' | xargs -I{} i3-msg {}"
+bindsym $mod+KP_Subtract exec "/home/xiang/apps/i3-move-to-workspace"
