--- a/configs/link-files/i3status.conf
+++ b/configs/link-files/i3status.conf
@@ -32,7 +32,8 @@ order += "volume master"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "run_watch DHCP"
-order += "run_watch VPN"
+#order += "run_watch VPN"
+order += "run_watch SSR"
 #order += "battery 1"
 order += "load"
 order += "tztime local"
@@ -55,6 +56,10 @@ ethernet _first_ {
 
 run_watch DHCP {
 	pidfile = "/var/run/dhclient*.pid"
+}
+
+run_watch SSR {
+	pidfile = "/var/run/shadowsocksr.pid"
 }
 
 run_watch VPN {
