--- a/configs/link-files/i3/config
+++ b/configs/link-files/i3/config
@@ -1,5 +1,57 @@
 gaps inner 10
 gaps outer 0
+
+# Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
+# # gaps inner|outer current|all set|plus|minus <px>
+# # gaps inner all set 10
+# # gaps outer all plus 5
+bindsym $mod+Shift+KP_Add gaps inner current plus 5
+bindsym $mod+Shift+KP_Subtract gaps inner current minus 5
+
+# Smart gaps (gaps used if only more than one container on the workspace)
+# smart_gaps on
+
+# Smart borders (draw borders around container only if it is not the only container on this workspace)
+# on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
+# smart_borders on
+
+# Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
+#set $mode_gaps Gaps: (o) outer, (i) inner
+#set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+#set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+#bindsym $mod+Shift+g mode "$mode_gaps"
+
+#mode "$mode_gaps" {
+    #bindsym o      mode "$mode_gaps_outer"
+    #bindsym i      mode "$mode_gaps_inner"
+    #bindsym Return mode "default"
+    #bindsym Escape mode "default"
+#}
+#mode "$mode_gaps_inner" {
+    #bindsym plus  gaps inner current plus 5
+    #bindsym minus gaps inner current minus 5
+    #bindsym 0     gaps inner current set 0
+
+    #bindsym Shift+plus  gaps inner all plus 5
+    #bindsym Shift+minus gaps inner all minus 5
+    #bindsym Shift+0     gaps inner all set 0
+
+    #bindsym Return mode "default"
+    #bindsym Escape mode "default"
+#}
+#mode "$mode_gaps_outer" {
+    #bindsym plus  gaps outer current plus 5
+    #bindsym minus gaps outer current minus 5
+    #bindsym 0     gaps outer current set 0
+
+    #bindsym Shift+plus  gaps outer all plus 5
+    #bindsym Shift+minus gaps outer all minus 5
+    #bindsym Shift+0     gaps outer all set 0
+
+    #bindsym Return mode "default"
+    #bindsym Escape mode "default"
+#}
+
 #xprop click on window to get Class
 for_window [class="^.*"] border pixel 0
 new_window pixel
@@ -282,6 +334,8 @@ exec_always --no-startup-id blueman-applet
 #exec_always --no-startup-id indicator-china-weather
 #exec --no-startup-id feh --bg-scale /usr/share/backgrounds/Cielo_estrellado_by_Eduardo_Diez_Viñuela.jpg
 exec_always --no-startup-id feh --bg-scale $HOME/Pictures/background.jpg
+exec_always --no-startup-id setxkbmap -option caps:escape
+
 bindsym $mod+Shift+w exec /usr/bin/google-chrome
 bindsym $mod+Shift+i exec /usr/bin/google-chrome --incognito --new-window
 bindsym $mod+Shift+f exec /usr/bin/firefox
@@ -290,7 +344,7 @@ bindsym $mod+Shift+u exec /usr/bin/netease-cloud-music
 #bindsym $mod+Shift+n exec /home/xiang/apps/boostnote/usr/share/boostnote/Boostnote
 bindsym $mod+Shift+z exec /usr/bin/zeal
 #bindsym $mod+Shift+g exec /usr/bin/gimp
-bindsym $mod+Shift+g exec flatpak run org.gimp.GIMP
+#bindsym $mod+Shift+g exec flatpak run org.gimp.GIMP
 bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+Ctrl+Left workspace prev
 bindsym $mod+Ctrl+Right workspace next
@@ -334,3 +388,15 @@ bindsym $mod+KP_Add exec i3-input -F 'workspace "%s"' -P 'new workspace: '
 #"i3-msg -t get_workspaces | jq -r 'map(select(.focused))[0].name'"
 #bindsym $mod+KP_Divide exec "echo 'exit' | xargs -I{} i3-msg {}"
 bindsym $mod+KP_Subtract exec "/home/xiang/apps/i3-move-to-workspace"
+
+# Pulse Audio controls
+# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +1%
+# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -1%
+# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+#
+# # Media player controls
+# bindsym XF86AudioPlay exec playerctl play
+# bindsym XF86AudioPause exec playerctl pause
+# bindsym XF86AudioNext exec playerctl next
+# bindsym XF86AudioPrev exec playerctl previous
+#
