--- a/configs/link-files/polybar/config
+++ b/configs/link-files/polybar/config
@@ -53,16 +53,16 @@ module-margin-left = 1
 module-margin-right = 2
 
 ;font-0 = fixed:pixelsize=12;1
-font-0 = "FontAwesome:pixelsize=12;1"
-font-1 = unifont:fontformat=truetype:size=12:antialias=false;0
-font-2 = siji:pixelsize=12;1
+; font-1 = unifont:fontformat=truetype:size=12:antialias=false;0
+; font-2 = siji:pixelsize=12;1
 ;font-3 = "Font Awesome 5 Free:style=Regular:pixelsize=12;1"
-font-3 = "Font Awesome 5 Free Regular:pixelsize=12;1"
-font-4 = "Font Awesome 5 Free:style=Solid:pixelsize=12;1"
-font-5 = Lato:pixelsize=12;1
-font-6 = "WenQuanYi Micro Hei Mono:pixelsize=12;3"
-font-7 = "Ubuntu Mono:style=Regular:pixelsize=12;1"
-font-8 = "Symbola:style=Regular:pixelsize=12;1"
+; font-3 = "Font Awesome 5 Free Regular:pixelsize=12;1"
+; font-4 = "Font Awesome 5 Free:style=Solid:pixelsize=12;1"
+font-0 = Lato:pixelsize=12;1
+font-1 = "WenQuanYi Micro Hei Mono:pixelsize=12;3"
+font-2 = "Ubuntu Mono:style=Regular:pixelsize=12;1"
+font-3 = "FontAwesome:pixelsize=12;1"
+font-4 = "Symbola:style=Regular:pixelsize=18;1"
 ;font-7 = "Ubuntu Mono:style=Regular:pixelsize=12;1"
 
 modules-left = i3
@@ -273,12 +273,13 @@ type = internal/mpd
 format-online = <label-song> <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> 
 
 ;label-song = 𝄞 %artist% - %title%
-label-song =  %artist% - %title%
+label-song = _   𝄞 %artist% - %title%
 ;label-song = %artist% - %title%
 label-offline = 🎜 mpd is offline
 
 ; Only applies if <icon-X> is used
-;icon-play = /home/xiang/Downloads/pycharm-2018.3/bin/JetbrainsCrack-3.1-release-enc.jar;icon-pause = ⏸
+icon-play = ⏵
+icon-pause = ⏸
 icon-stop = ⏹
 icon-prev = ⏮
 icon-next = ⏭
@@ -299,13 +300,13 @@ bar-progress-width = 40
 bar-progress-indicator = >
 bar-progress-fill = =
 bar-progress-empty = ─
-; icon-prev =   ||
-; icon-stop =  ||
-icon-play =  ||
+; icon-prev =  
+; icon-stop =  
+; icon-play =  
 ; icon-random = 
 ; icon-repeat = %{T5}🎜%{T-}
 ; icon-repeat = 
-icon-pause =  ||
+; icon-pause =  
 ; icon-next = 
 
 label-song-maxlen = 25
